[gd_scene load_steps=11 format=2]

[ext_resource path="res://menuScene.gd" type="Script" id=1]
[ext_resource path="res://Font/Hannover Messe Sans.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/background.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -10
extra_spacing_bottom = -10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_size = 1
outline_color = Color( 0.235294, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -77, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -95, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "gameTitle"
length = 1.2
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -77, -0.25, 0, 0.25, 0, -77, -0.25, 0, 0.25, 0, -77, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -95, -0.25, 0, 0.25, 0, -106, -0.25, 0, 0.25, 0, -95, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1.2 )
}

[sub_resource type="DynamicFont" id=8]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="menuScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Background" type="Sprite" parent="Camera2D"]
z_index = -5
texture = ExtResource( 6 )

[node name="scoreText" type="Label" parent="."]
margin_left = -75.0
margin_top = -139.0
margin_right = -10.0
margin_bottom = -114.0
custom_fonts/font = SubResource( 2 )
text = "HIGHSCORE: 100"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="playButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = 15.0
margin_right = 47.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "PLAY"

[node name="resetScore" type="Button" parent="."]
visible = false
margin_left = -41.0
margin_top = 121.0
margin_right = 124.0
margin_bottom = 163.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
custom_fonts/font = SubResource( 7 )
text = "RESET HIGHSCORE"
flat = true

[node name="optionsButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = 54.0
margin_right = 47.0
margin_bottom = 85.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "OPTIONS"

[node name="backButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = 94.0
margin_right = 29.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "BACK"

[node name="gameTitle" type="Label" parent="."]
margin_left = -77.0
margin_top = -95.0
margin_right = 77.0
margin_bottom = 6.10352e-05
custom_fonts/font = SubResource( 3 )
text = "COLLECT ALL UP"
align = 1
valign = 1
autowrap = true

[node name="titleAnimationPlayer" type="AnimationPlayer" parent="gameTitle"]
reset_on_save = false
method_call_mode = 1
anims/RESET = SubResource( 6 )
anims/gameTitle = SubResource( 5 )

[node name="SFX" type="Node2D" parent="."]
visible = false
position = Vector2( -26, 14 )
scale = Vector2( 0.75, 0.75 )

[node name="Label" type="Label" parent="SFX"]
margin_left = -40.0
margin_top = -6.66667
margin_bottom = 18.3333
custom_fonts/font = SubResource( 8 )
text = "SOUND:"

[node name="HSlider" type="HSlider" parent="SFX"]
margin_left = 16.0
margin_top = -4.0
margin_right = 116.0
margin_bottom = 16.0

[connection signal="pressed" from="playButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="resetScore" to="." method="_on_resetScore_pressed"]
[connection signal="pressed" from="optionsButton" to="." method="_on_optionsButton_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
